# giveaway-x

./: Anchor.toml  Cargo.toml  package.json  publish.sh  tsconfig.json
migrations/: deploy.ts
programs/giveaway/: Cargo.toml
programs/giveaway/src/: errors.rs  event_type.rs  lib.rs  utils.rs
programs/reelpay/: Cargo.toml
programs/reelpay/src/: errors.rs  lib.rs  utils.rs
programs/wallet/: Cargo.toml
programs/wallet/src/: lib.rs
tests/: giveaway.ts  reelpay.ts  wallet.ts
